boost1.46 (1.46.1-2) unstable; urgency=low

  * control (libboost-mpi-python1.46.1): Add conflict with
    libboost-mpi-python1.46.0.  Closes: #618441.

 -- Steve M. Robbins <smr@debian.org>  Sat, 19 Mar 2011 13:47:13 -0500

boost1.46 (1.46.1-1) unstable; urgency=low

  * New upstream.
  
  * control: Add libboost-random1.46-dev to depends of -all-dev and
    suggests of -dev.  Closes: #615849.

 -- Steve M. Robbins <smr@debian.org>  Sun, 13 Mar 2011 00:37:35 -0600

boost1.46 (1.46.0-1) unstable; urgency=low

  * New upstream release.
    - Fixes Boost ticket 4631.  Closes: #595955.
    - Program.Options updated.  Closes: #593522.
    - Also Closes: #537680.
  
  * control:
  * rules: Set versions to 1.46.  Remove obsolete conflicts.

  * rules: Don't use "long double" for architecture "armhf".  
    Closes: #604107.
  
  * control:
  * rules: New packages for Boost.Random.  Closes: #610821.
  
 -- Steve M. Robbins <smr@debian.org>  Tue, 22 Feb 2011 00:18:43 -0600

boost1.45 (1.45.0-1) experimental; urgency=low

  * New upstream.
    - patches/kfreebsd-jam.patch: Remove.  Applied upstream.
    - patches/boost-build-pythonid.patch: Remove.  Applied upstream.

  * control:
  * rules:
  * documentation-files:
  * example-files: Updates for new version.
  
 -- Steve M. Robbins <smr@debian.org>  Tue, 14 Dec 2010 00:58:11 -0600

boost1.44 (1.44.0-2) experimental; urgency=low

  * rules, control: Build Python extensions for Python 3 in addition to
    Python 2.

  * patches/boost-1.44-py3.1.patch: New.  Fix Boost.MPI build failure for
    Python 3 (thanks, Andreas Kloeckner).  Closes: #595786.

 -- Steve M. Robbins <smr@debian.org>  Sat, 18 Sep 2010 12:03:46 -0500

boost1.44 (1.44.0-1) experimental; urgency=low

  * New upstream.  Closes: #582690, #594634.
    - patches/boost-build-pythonid.patch: Modify.  Partially applied upstream.
    - patches/lambda-include-deps.patch: Remove.  Applied upstream.
    - patches/kfreebsd-thread.patch: Refresh.