@@ -4,13 +4,23 @@ Section: libs
 Priority: optional
 Maintainer: Debian Boost Team <pkg-boost-devel@lists.alioth.debian.org>
 Uploaders: Steve M. Robbins <smr@debian.org>, Domenico Andreoli <cavok@debian.org>
-Build-Depends: debhelper (>= 7), bison, flex, docbook-to-man, xsltproc, doxygen, zlib1g-dev, libbz2-dev, libicu-dev, python-all-dev, python3-all-dev (>= 3.1), python-support (>= 0.6), mpi-default-dev
+Build-Depends: debhelper (>= 7), bison, flex, docbook-to-man, help2man, xsltproc, doxygen, zlib1g-dev, libbz2-dev, libicu-dev, python-all-dev, python3-all-dev (>= 3.1), python-support (>= 0.6), mpi-default-dev
 Build-Conflicts: libopenmpi-dev (= 1.3.2-2)
 X-Python-Version: >= 2.4
 X-Python3-Version: >= 3.0
 Vcs-Browser: http://svn.debian.org/wsvn/pkg-boost/boost/trunk/
 Vcs-Svn: svn://svn.debian.org/svn/pkg-boost/boost/trunk
 Standards-Version: 3.8.3
+
+Package: bjam
+Architecture: any
+Depends: ${misc:Depends}, ${shlibs:Depends}
+Description: Software build tool 
+ Boost.Jam (BJam) is a portable build tool with its own interpreted language,
+ which allows to implement rather complex logic in a readable way and without
+ resorting to external programs. It is a descendant of Jam/MR tool modified to
+ suit the needs of Boost.Build. In particular, modules and rule parameters
+ were added, as well as several new builtins.
 
 Package: libboost1.46-dbg
 Architecture: any
